--- a/CSS.html
+++ b/CSS.html
@@ -5,6 +5,9 @@
         h1 {
         color: rgb(250, 10, 10);
       }
+        h2 {
+        color: rgb(45, 105, 15);
+          }      
         body {
             background-color: rgb(221, 230, 230);
         }
