--- a/CSS.html
+++ b/CSS.html
@@ -21,12 +21,8 @@
       </style>
     </head>
     <body>
+    <input type="button" onclick="show_prompt()" value="Estrai l'interrogato" />
     
-    <form action=http://www.html.ittarget=”_blank”>    
-    <buttontype=”button”>
-   bottone generico
-    </button>
-    </form>                                   
    
         <h1>Italia</h1>
         
