--- a/CSS.html
+++ b/CSS.html
@@ -22,13 +22,13 @@
 	{
     var num = Math.round(10*Math.random());
     alert(num)
-	document.getElementById("demo").innerHTML=Numero();
+	document.getElementById("num").innerHTML=num();
 	}
             
       </style>
     </head>
     <body>
-    <p id="demo"></p>
+    <p id="num"></p>
     <input type="button" onclick="estrazioneNumero()" value="Estrai l'interrogato" />
     
    
