--- a/CSS.html
+++ b/CSS.html
@@ -23,8 +23,8 @@
       </style>
     </head>
     <body>
-    <button onclick="myFunction()">Try it</button>
-	    <p id="demo"></p>
+    <button onclick="Estrazione()">Estrai l'interrogato</button>
+	    <p id="numero"></p>
 	    
     
    
@@ -49,9 +49,9 @@
    
     </body>
 	<script>
-		function myFunction() {
+		function Estrazione() {
     var x = Math.floor((Math.random() * 10) + 1);
-    document.getElementById("demo").innerHTML = x;
+    document.getElementById("numero").innerHTML = x;
 }
 	</script>
 </html>
