--- a/CSS.html
+++ b/CSS.html
@@ -46,7 +46,9 @@
            si ricordano la civiltà villanoviana e i popoli indoeuropei trasferitisi in Italia dall'Europa orientale e centrale in varie ondate migratorie; <br> 
            essi si mescolano alle etnie preesistenti nel territorio, stabilendo una forma di convivenza pacifica con esse;<br>
            si delinea in tal modo fin da quest'epoca la suddivisione regionale del territorio italiano.</p>
-   
+	
+   	<p Riportiamo cosa disse Enrico De Nicola il giorno della nascita della Repubblica italiana:</p>
+	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
 		function Estrazione() {
