--- a/CSS.html
+++ b/CSS.html
@@ -54,6 +54,9 @@
 		function Estrazione() {
     var x = Math.floor((Math.random() * 15) + 1);
     document.getElementById("numero").innerHTML = x;
+			
+		var DeNicolaDisse = document.getElementById("DeNicola-disse");
+            DeNicolaDisse.innerHTML = "Wow! <strong>Incredibile</strong>!!!";
 }
 	</script>
 </html>
