--- a/CSS.html
+++ b/CSS.html
@@ -47,7 +47,7 @@
            essi si mescolano alle etnie preesistenti nel territorio, stabilendo una forma di convivenza pacifica con esse;<br>
            si delinea in tal modo fin da quest'epoca la suddivisione regionale del territorio italiano.</p>
 	
-   	<p Riportiamo cosa disse Enrico De Nicola il giorno della nascita della Repubblica italiana:</p>
+   	<p class="italia-storia">Riportiamo cosa disse Enrico De Nicola il giorno della nascita della Repubblica italiana:</p>
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
