--- a/CSS.html
+++ b/CSS.html
@@ -57,7 +57,7 @@
 	}
 			
 	var DeNicolaDisse = document.getElementById("DeNicola-disse");
-        DeNicolaDisse.innerHTML = "BELLA";
+        DeNicolaDisse.innerHTML = ""BELLA"";
 
 	</script>
 </html>
