--- a/CSS.html
+++ b/CSS.html
@@ -59,7 +59,7 @@
 	}
 		var titoli = document.getElementsByTagName("h1");
     for (var i = 0; i < titoli.length; i++) {
-        titoli[i].height = 200;
+        titoli[i].style.fontFamily = "cursive";
         
     }
 			
