--- a/CSS.html
+++ b/CSS.html
@@ -23,6 +23,7 @@
       </style>
     </head>
     <body>
+	// Creo il bottone che estrarrà l'interrogato
     <button onclick="Estrazione()">Estrai l'interrogato</button>
 	    <p id="numero"></p>
 	    
