--- a/CSS.html
+++ b/CSS.html
@@ -54,20 +54,23 @@
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
+	// Definisco la funzione che attraverso un randomize estrarrà un numero da 1 a 15 e utilizzando l'Id con innerHTML apparirà il numero estratto
 		function Estrazione() {
     var x = Math.floor((Math.random() * 15) + 1);
     document.getElementById("numero").innerHTML = x;
 	}
+	// Attraverso un ciclo for scrivo tutti i titoli in corsivo utilizzando il nome del tag
 		var titoli = document.getElementsByTagName("h1");
     for (var i = 0; i < titoli.length; i++) {
         titoli[i].style.fontFamily = "cursive";
         
     }
+	// Attraverso un ciclo for scrivo tutti i paragrafi appartenenti alla classe "italia-storia" con il carattere sans serif utilizzando il nome della classe
 		var storia = document.getElementsByClassName("italia-storia");
     for (var i = 0; i < storia.length; i++) {
         storia[i].style.fontFamily = "sans-serif";
      }
-			
+	// Utilizzando l'Id e innerHTML riporto una citazione
 	var DeNicolaDisse = document.getElementById("DeNicola-disse");
         DeNicolaDisse.innerHTML = "«Giuro davanti al popolo italiano, per mezzo della Assemblea Costituente, che ne è la diretta e legittima rappresentanza, di compiere la mia breve, ma intensa missione di Capo provvisorio dello Stato inspirandomi ad un solo ideale: di servire con fedeltà e con lealtà il mio Paese. <br> Per l'Italia si inizia un nuovo periodo storico di decisiva importanza. <br> All'opera immane di ricostruzione politica e sociale dovranno concorrere, con spirito di disciplina e di abnegazione, tutte le energie vive della Nazione, non esclusi coloro i quali si siano purificati da fatali errori e da antiche colpe. <br> Dobbiamo avere la coscienza dell'unica forza di cui disponiamo: della nostra infrangibile unione. Con essa potremo superare le gigantesche difficoltà che s'ergono dinanzi a noi; senza di essa precipiteremo nell'abisso per non risollevarci mai più. <br> I partiti dovranno procedere, nelle lotte per il fine comune del pubblico bene, secondo il monito di un grande stratega: Marciare divisi per combattere uniti. <br> La grandezza morale di un popolo si misura dal coraggio con cui esso subisce le avversità della sorte, sopporta le sventure, affronta i pericoli, trasforma gli ostacoli in alimento di propositi e di azione, va incontro al suo incerto avvenire. <br> La nostra volontà gareggerà con la nostra fede. <br> E l'Italia riprenderà il suo cammino di ordinato progresso nel mondo, perché il suo genio è immortale. <br> Ogni umiliazione inflitta al suo onore, alla sua indipendenza, alla sua unità provocherebbe non il crollo di una Nazione, ma il tramonto di una civiltà: se ne ricordino coloro che sono oggi gli arbitri dei suoi destini. <br> Se è vero che il popolo italiano partecipò a una guerra, che gli fu imposta contro i suoi sentimenti, le sue aspirazioni e i suoi interessi, non è men vero che esso diede un contributo efficace alla vittoria definitiva, sia con generose iniziative, sia con tutti i mezzi che gli furono richiesti, meritando il solenne riconoscimento dei preziosi servigi resi continuamente e con fermezza alla causa comune, nelle forze armate. <br> La vera pace è quella delle anime. <br> Non si costruisce un nuovo ordinamento internazionale, saldo e sicuro, sulle ingiustizie che non si dimenticano e sui rancori che ne sono l'inevitabile retaggio. <br> La Costituzione della Repubblica italiana sarà certamente degna delle nostre gloriose tradizioni giuridiche, assicurerà alle generazioni future un regime di sana e forte democrazia, nel quale i diritti dei cittadini e i poteri dello Stato siano egualmente garantiti, trarrà dal passato salutari insegnamenti, consacrerà per i rapporti economico-sociali i principi fondamentali, che la legislazione ordinaria dovrà in seguito svolgere e disciplinare. <br> Accingiamoci, adunque, alla nostra opera senza temerarie esaltazioni e senza sterili scoramenti, col grido che erompe dai nostri cuori pervasi dalla tristezza dell'ora ma ardenti sempre di speranza e di amore per la Patria: Che Iddio acceleri e protegga la resurrezione d'Italia!»";
 
