--- a/CSS.html
+++ b/CSS.html
@@ -23,7 +23,7 @@
       </style>
     </head>
     <body>
-	// Creo il bottone che estrarrà l'interrogato
+
     <button onclick="Estrazione()">Estrai l'interrogato</button>
 	    <p id="numero"></p>
 	    
@@ -54,6 +54,7 @@
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
+	// Precedentemente ho creato il bottone che estrarrà l'interrogato 
 	// Definisco la funzione che attraverso un randomize estrarrà un numero da 1 a 15 e utilizzando l'Id con innerHTML apparirà il numero estratto
 		function Estrazione() {
     var x = Math.floor((Math.random() * 15) + 1);
