--- a/CSS.html
+++ b/CSS.html
@@ -82,7 +82,7 @@
     document.getElementById("numero").innerHTML = x;
 	}
 		var Alunni = document.querySelectorAll('#Alunni li');
-		var alunnoEstratto = x;
+		var alunnoEstratto = Alunni[x];
 		alunnoEstratto.className = "alunno-estratto";
 	// Attraverso un ciclo for scrivo tutti i titoli in corsivo utilizzando il nome del tag
 		var titoli = document.getElementsByTagName("h1");
