--- a/CSS.html
+++ b/CSS.html
@@ -29,7 +29,7 @@
     <button onclick="Estrazione()">Estrai l'interrogato</button>
 	    <p id="numero"></p>
 	    
-	<ol id="Alunni">
+	<ol id="alunni">
         	<li>Idan</li>
         	<li>Alex</li>
         	<li>Leam</li>
@@ -81,8 +81,8 @@
     var x = Math.floor((Math.random() * 15) + 1);
     document.getElementById("numero").innerHTML = x;
 	}
-		var Alunni = document.querySelectorAll('#Alunni li');
-		var alunnoEstratto = Alunni[x];
+		var alunni = document.querySelectorAll('#alunni li');
+		var alunnoEstratto = alunni[x];
 		alunnoEstratto.className = "alunno-estratto";
 	// Attraverso un ciclo for scrivo tutti i titoli in corsivo utilizzando il nome del tag
 		var titoli = document.getElementsByTagName("h1");
