--- a/CSS.html
+++ b/CSS.html
@@ -25,7 +25,11 @@
     <body>
 
     <button onclick="Estrazione()">Estrai l'interrogato</button>
-	    <p id="numero"></p>
+	    <p id="numero"></p>ù
+	<input
+        type="button"
+        id="bottoneimprendibile"
+        onmouseover="Scappa()">
 	 
 	<div>
 	<ol>
@@ -75,6 +79,16 @@
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
+		
+	function Scappa()
+{
+    var bottoneimprendibile = document.getElementById("bottoneimprendibile");
+    var x = Math.floor(Math.random() * 500);
+    var y = Math.floor(Math.random() * 500);
+    bottoneimprendibile.style.position = "absolute";
+    bottoneimprendibile.style.top = x + "px";
+    bottoneimprendibile.style.left = y + "px";
+}
 	// Precedentemente ho creato il bottone che estrarrà l'interrogato 
 		var alunni = ["Idan", "Alex", "Leam", "Sacha", "Michelle", "Isaac", "Jacopo", "Gadi", "Noemi", "David", "Gabriel", "Leopoldo", "Nicolò", "Romina", "Simon"];
 	// Definisco la funzione che attraverso un randomize estrarrà un numero da 1 a 15 e utilizzando l'Id con innerHTML apparirà il numero estratto
