--- a/CSS.html
+++ b/CSS.html
@@ -25,7 +25,7 @@
     <body>
 
     <button onclick="Estrazione()">Estrai l'interrogato</button>
-	    <p id="numero"></p>ù
+	    <p id="numero"></p>
 	<input
         type="button"
         id="bottoneimprendibile"
