--- a/CSS.html
+++ b/CSS.html
@@ -94,7 +94,7 @@
 		var alunni = ["Idan", "Alex", "Leam", "Sacha", "Michelle", "Isaac", "Jacopo", "Gadi", "Noemi", "David", "Gabriel", "Leopoldo", "Nicolò", "Romina", "Simon"];
 	// Definisco la funzione che attraverso un randomize estrarrà un numero da 1 a 15 e utilizzando l'Id con innerHTML apparirà il numero estratto
 		function Estrazione() {
-    var x = Math.floor(Math.random() * alunni.length -1);
+    var x = Math.floor(Math.random() * alunni.length);
     document.getElementById("numero").innerHTML = x;
     var alunnoestratto = document.getElementsByTagName("li");
     alunnoestratto[x].style.backgroundColor = "green";
