--- a/CSS.html
+++ b/CSS.html
@@ -26,11 +26,7 @@
 
     <button onclick="Estrazione()">Estrai l'interrogato</button>
 	    <p id="numero"></p>
-	<input
-        type="button"
-        id="bottoneimprendibile"
-	value="PRENDIMI E NON VERRAI INTERROGATO"
-        onmouseover="Scappa()">
+	<button id="bottone-imprendibile">PRENDIMI E SCEGLIERAI L'INTERROGATO</button>
 	 
 	<div>
 	<ol>
@@ -80,16 +76,18 @@
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
+	var bottoneimprendibile = document.getElementById('bottone-imprendibile');
+	var scappa = function() {
+		var x = Math.floor(Math.random() * 500);
+		var y = Math.floor(Math.random() * 500);
+		bottoneimprendibile.style.position = "absolute";
+		bottoneimprendibile.style.top = x + "px";
+		bottoneimprendibile.style.left = y + "px";
+	}
+	bottoneimprendibile.addEventListener('over', scappa);
 		
-	function Scappa()
-{
-    var bottoneimprendibile = document.getElementById("bottoneimprendibile");
-    var x = Math.floor(Math.random() * 500);
-    var y = Math.floor(Math.random() * 500);
-    bottoneimprendibile.style.position = "absolute";
-    bottoneimprendibile.style.top = x + "px";
-    bottoneimprendibile.style.left = y + "px";
-}
+		
+		
 	// Precedentemente ho creato il bottone che estrarrà l'interrogato 
 		var alunni = ["Idan", "Alex", "Leam", "Sacha", "Michelle", "Isaac", "Jacopo", "Gadi", "Noemi", "David", "Gabriel", "Leopoldo", "Nicolò", "Romina", "Simon"];
 	// Definisco la funzione che attraverso un randomize estrarrà un numero da 1 a 15 e utilizzando l'Id con innerHTML apparirà il numero estratto
