--- a/CSS.html
+++ b/CSS.html
@@ -76,7 +76,7 @@
 	<p id = "DeNicola-disse"></p>
     </body>
 	<script>
-	var bottoneimprendibile = document.getElementById('bottone-imprendibile');
+	var bottoneimprendibile = document.getElementById("bottone-imprendibile");
 	var scappa = function() {
 		var x = Math.floor(Math.random() * 500);
 		var y = Math.floor(Math.random() * 500);
@@ -84,7 +84,7 @@
 		bottoneimprendibile.style.top = x + "px";
 		bottoneimprendibile.style.left = y + "px";
 	}
-	bottoneimprendibile.addEventListener('over', scappa);
+	bottoneimprendibile.addEventListener("mouseover", scappa);
 		
 		
 		
