--- a/CSS.html
+++ b/CSS.html
@@ -77,7 +77,7 @@
     </body>
 	<script>
 	var bottoneimprendibile = document.getElementById("bottone-imprendibile");
-	var scappa = function() {
+	scappa = function() {
 		var x = Math.floor(Math.random() * 500);
 		var y = Math.floor(Math.random() * 500);
 		bottoneimprendibile.style.position = "absolute";
