--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <html>
     <head>
       <style>
-          <img src=""
+          <img src="https://www.shutterstock.com/it/image-illustration/start-screen-old-video-game-retro-496929268?src=0dhJwnxh1Lb1LjwYyy-fUg-1-0">
