--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
     <head>
       <style>
           <img src="https://www.shutterstock.com/it/image-illustration/start-screen-old-video-game-retro-496929268?src=0dhJwnxh1Lb1LjwYyy-fUg-1-0">
+   
+        </style>
+    </head>
+   <body>
